--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-react": "^6.24.1",
         "babel-register": "^6.26.0",
+        "dotenv": "^16.4.5",
         "framer-motion": "^4.1.17",
         "react": "^18.2.0",
         "react-apexcharts": "1.4.0",
