--- a/server/.gitignore
+++ b/server/.gitignore
@@ -21,6 +21,7 @@ build
 .env.test.local
 .env.production.local
 .env
+client_secret_999339549306-t1lo64t2qc3gas644a1f8pmep0ks8jsh.apps.googleusercontent.com.json
 
 npm-debug.log*
 yarn-debug.log*
