--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "content-disposition": "^0.5.4",
     "content-type": "^1.0.5",
     "cookie": "^0.6.0",
+    "cookie-session": "^2.1.0",
     "cookie-signature": "^1.0.6",
     "cors": "^2.8.5",
     "debug": "^2.6.9",
@@ -62,6 +63,8 @@
     "object-inspect": "^1.13.1",
     "on-finished": "^2.4.1",
     "parseurl": "^1.3.3",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "path-to-regexp": "^0.1.7",
     "proxy-addr": "^2.0.7",
     "punycode": "^2.3.1",
