--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,5 @@
 {
     "name": "react-app",
-    
     "version": "1.0.1",
     "dependencies": {
         "@chakra-ui/icons": "^1.1.5",
@@ -21,6 +20,7 @@
         "babel-preset-react": "^6.24.1",
         "babel-register": "^6.26.0",
         "bwip-js": "^4.3.2",
+        "date-fns": "^3.6.0",
         "dotenv": "^16.4.5",
         "framer-motion": "^4.1.17",
         "jspdf": "^2.5.1",
