--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
         "react-dropzone": "^12.0.4",
         "react-icons": "^4.3.1",
         "react-is": "^18.0.0",
+        "react-phone-number-input": "^3.4.1",
         "react-redux": "^9.1.0",
         "react-router-dom": "^5.3.0",
         "react-scripts": "5.0.0",
