--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "accepts": "^1.3.8",
     "array-flatten": "^1.1.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "bson": "^6.5.0",
     "bytes": "^3.1.2",
@@ -43,6 +44,7 @@
     "iconv-lite": "^0.4.24",
     "inherits": "^2.0.4",
     "ipaddr.js": "^1.9.1",
+    "jsonwebtoken": "^9.0.2",
     "kareem": "^2.5.1",
     "media-typer": "^0.3.0",
     "memory-pager": "^1.5.0",
@@ -57,6 +59,7 @@
     "mpath": "^0.9.0",
     "mquery": "^5.0.0",
     "ms": "^2.0.0",
+    "multer": "^1.4.5-lts.1",
     "negotiator": "^0.6.3",
     "nodemon": "^3.1.0",
     "object-assign": "^4.1.1",
