--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
         "dotenv": "^16.4.5",
         "framer-motion": "^4.1.17",
         "jspdf": "^2.5.1",
+        "jwt-decode": "^4.0.0",
         "nanoid": "^5.0.7",
         "pngjs": "^7.0.0",
         "react": "^18.2.0",
@@ -36,7 +37,7 @@
         "react-is": "^18.0.0",
         "react-phone-number-input": "^3.4.1",
         "react-redux": "^9.1.0",
-        "react-router-dom": "^5.3.0",
+        "react-router-dom": "^5.2.0",
         "react-scripts": "5.0.0",
         "react-spinners": "^0.13.8",
         "react-table": "^7.7.0",
