--- a/client/package.json
+++ b/client/package.json
@@ -41,7 +41,8 @@
         "react-scripts": "5.0.0",
         "react-spinners": "^0.13.8",
         "react-table": "^7.7.0",
-        "react-toastify": "^10.0.5",
+        "react-toastify": "^10.0.1",
+        "recharts": "^2.12.7",
         "redux": "^5.0.1",
         "redux-thunk": "^3.1.0",
         "stylis": "^4.1.1",
