--- a/client/package.json
+++ b/client/package.json
@@ -25,12 +25,18 @@
         "framer-motion": "^4.1.17",
         "jspdf": "^2.5.1",
         "jwt-decode": "^4.0.0",
+        "moment": "^2.30.1",
+        "moment-timezone": "^0.5.45",
         "nanoid": "^5.0.7",
         "pngjs": "^7.0.0",
         "react": "^18.2.0",
         "react-apexcharts": "1.4.0",
+        "react-big-calendar": "^1.13.0",
         "react-calendar": "^3.7.0",
         "react-custom-scrollbars-2": "^4.2.1",
+        "react-datepicker": "^7.2.0",
+        "react-dnd": "^16.0.1",
+        "react-dnd-html5-backend": "^16.0.1",
         "react-dom": "^18.2.0",
         "react-dropzone": "^12.0.4",
         "react-icons": "^4.3.1",
@@ -38,7 +44,7 @@
         "react-phone-number-input": "^3.4.1",
         "react-redux": "^9.1.0",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "5.0.0",
+        "react-scripts": "^5.0.0",
         "react-spinners": "^0.13.8",
         "react-table": "^7.7.0",
         "react-toastify": "^10.0.1",
