--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,13 @@
         "@emotion/react": "^11.4.1",
         "@emotion/styled": "^11.3.0",
         "@hypertheme-editor/chakra-ui": "^0.1.5",
+        "@react-google-maps/api": "^2.19.3",
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
+        "@tomtom-international/web-sdk-maps": "^6.25.0",
+        "@tomtom-international/web-sdk-services": "^6.25.0",
+        "@turf/turf": "^7.0.0",
         "apexcharts": "3.35.2",
         "axios": "^1.6.8",
         "babel-cli": "^6.26.0",
@@ -25,6 +29,9 @@
         "framer-motion": "^4.1.17",
         "jspdf": "^2.5.1",
         "jwt-decode": "^4.0.0",
+        "leaflet": "^1.9.4",
+        "leaflet-fullscreen": "^1.0.2",
+        "leaflet-routing-machine": "^3.2.12",
         "nanoid": "^5.0.7",
         "pngjs": "^7.0.0",
         "react": "^18.2.0",
@@ -35,6 +42,7 @@
         "react-dropzone": "^12.0.4",
         "react-icons": "^4.3.1",
         "react-is": "^18.0.0",
+        "react-leaflet": "^4.2.1",
         "react-phone-number-input": "^3.4.1",
         "react-redux": "^9.1.0",
         "react-router-dom": "^5.2.0",
@@ -45,6 +53,7 @@
         "recharts": "^2.12.7",
         "redux": "^5.0.1",
         "redux-thunk": "^3.1.0",
+        "socket.io-client": "^4.7.5",
         "stylis": "^4.1.1",
         "stylis-plugin-rtl": "2.0.2",
         "sweetalert2": "^11.10.7",
