--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "accepts": "^1.3.8",
     "array-flatten": "^1.1.1",
+    "axios": "^1.7.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "bson": "^6.5.0",
@@ -83,6 +84,7 @@
     "short-unique-id": "^5.2.0",
     "side-channel": "^1.0.6",
     "sift": "^16.0.1",
+    "socket.io": "^4.7.5",
     "sparse-bitfield": "^3.0.3",
     "statuses": "^2.0.1",
     "toidentifier": "^1.0.1",
