--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
         "jspdf": "^2.5.1",
         "jwt-decode": "^4.0.0",
         "leaflet": "^1.9.4",
+        "leaflet-control-geocoder": "^2.4.0",
         "leaflet-fullscreen": "^1.0.2",
         "leaflet-routing-machine": "^3.2.12",
         "nanoid": "^5.0.7",
