--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,13 @@
         "@emotion/react": "^11.4.1",
         "@emotion/styled": "^11.3.0",
         "@hypertheme-editor/chakra-ui": "^0.1.5",
+        "@mapbox/mapbox-sdk": "^0.16.0",
         "@react-google-maps/api": "^2.19.3",
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
         "@tomtom-international/web-sdk-maps": "^6.25.0",
+        "@tomtom-international/web-sdk-plugin-searchbox": "^3.2.0",
         "@tomtom-international/web-sdk-services": "^6.25.0",
         "@turf/turf": "^7.0.0",
         "apexcharts": "3.35.2",
@@ -33,6 +35,7 @@
         "leaflet-control-geocoder": "^2.4.0",
         "leaflet-fullscreen": "^1.0.2",
         "leaflet-routing-machine": "^3.2.12",
+        "mapbox-gl": "^1.13.2",
         "nanoid": "^5.0.7",
         "pngjs": "^7.0.0",
         "react": "^18.2.0",
