--- a/client/package.json
+++ b/client/package.json
@@ -48,6 +48,7 @@
         "react-is": "^18.0.0",
         "react-leaflet": "^4.2.1",
         "react-phone-number-input": "^3.4.1",
+        "react-qr-barcode-scanner": "^1.0.6",
         "react-redux": "^9.1.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "5.0.0",
