--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
         "@emotion/styled": "^11.3.0",
         "@hypertheme-editor/chakra-ui": "^0.1.5",
         "@mapbox/mapbox-sdk": "^0.16.0",
+        "@nadavshaar/react-grid-table": "^1.1.2",
         "@react-google-maps/api": "^2.19.3",
+        "@tanstack/react-table": "^8.20.5",
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
@@ -44,6 +46,7 @@
         "react-custom-scrollbars-2": "^4.2.1",
         "react-dom": "^18.2.0",
         "react-dropzone": "^12.0.4",
+        "react-grid-table": "^0.1.1",
         "react-icons": "^4.3.1",
         "react-is": "^18.0.0",
         "react-leaflet": "^4.2.1",
@@ -52,6 +55,7 @@
         "react-redux": "^9.1.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "5.0.0",
+        "react-select": "^5.8.0",
         "react-spinners": "^0.13.8",
         "react-table": "^7.7.0",
         "react-toastify": "^10.0.1",
