--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
         "mapbox-gl": "^1.13.2",
         "nanoid": "^5.0.7",
         "pngjs": "^7.0.0",
+        "print-js": "^1.6.0",
         "react": "^18.2.0",
         "react-apexcharts": "1.4.0",
         "react-calendar": "^3.7.0",
