--- a/server/package.json
+++ b/server/package.json
@@ -44,6 +44,7 @@
     "iconv-lite": "^0.4.24",
     "inherits": "^2.0.4",
     "ipaddr.js": "^1.9.1",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "kareem": "^2.5.1",
     "media-typer": "^0.3.0",
