--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,9 @@
     "framer-motion": "^11.7.0",
     "jspdf": "^2.5.2",
     "jwt-decode": "^4.0.0",
+    "leaflet-fullscreen": "^1.0.2",
+    "leaflet-routing-machine": "^3.2.12",
+    "leaflet.fullscreen": "^3.0.2",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "nanoid": "^5.0.7",
@@ -50,6 +53,8 @@
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.12.0",
     "react-is": "^18.3.1",
+    "react-leaflet": "^4.2.1",
+    "react-leaflet-fullscreen": "^4.1.1",
     "react-phone-number-input": "^3.4.8",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
