--- a/client/package.json
+++ b/client/package.json
@@ -45,6 +45,7 @@
     "react-apexcharts": "^1.4.1",
     "react-big-calendar": "^1.14.1",
     "react-calendar": "^5.0.0",
+    "react-chartjs-2": "^5.2.0",
     "react-custom-scrollbars-2": "^4.5.0",
     "react-datepicker": "^7.4.0",
     "react-dnd": "^16.0.1",
