--- a/server/package.json
+++ b/server/package.json
@@ -104,5 +104,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/express": "^5.0.0"
+  }
 }
