--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
+    "@tomtom-international/web-sdk-maps": "^6.25.0",
     "apexcharts": "^3.53.0",
     "axios": "^1.7.7",
     "babel-cli": "^6.26.0",
@@ -60,6 +61,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.8.3",
     "react-spinners": "^0.14.1",
     "react-table": "^7.8.0",
     "react-toastify": "^10.0.5",
