--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
     "moment-timezone": "^0.5.45",
     "nanoid": "^5.0.7",
     "pngjs": "^7.0.0",
+    "print-js": "^1.6.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-big-calendar": "^1.14.1",
@@ -58,6 +59,7 @@
     "react-leaflet": "^4.2.1",
     "react-leaflet-fullscreen": "^4.1.1",
     "react-phone-number-input": "^3.4.8",
+    "react-qr-barcode-scanner": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
