--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
     "@tomtom-international/web-sdk-maps": "^6.25.0",
+    "@tomtom-international/web-sdk-services": "^6.25.0",
     "apexcharts": "^3.53.0",
     "axios": "^1.7.7",
     "babel-cli": "^6.26.0",
