--- a/client/package.json
+++ b/client/package.json
@@ -72,6 +72,7 @@
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "socket.io-client": "^4.8.1",
+    "styled-components": "^6.1.14",
     "stylis": "^4.3.4",
     "stylis-plugin-rtl": "^2.1.1",
     "sweetalert2": "^11.14.1",
