--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "bson": "^6.5.0",
     "bytes": "^3.1.2",
     "call-bind": "^1.0.7",
+    "compression": "^1.8.0",
     "content-disposition": "^0.5.4",
     "content-type": "^1.0.5",
     "cookie": "^0.6.0",
