--- a/client/package.json
+++ b/client/package.json
@@ -73,6 +73,7 @@
     "stylis": "^4.3.4",
     "stylis-plugin-rtl": "^2.1.1",
     "sweetalert2": "^11.14.1",
+    "uuid": "^11.1.0",
     "web-vitals": "^4.2.3"
   },
   "devDependencies": {
