--- a/client/package.json
+++ b/client/package.json
@@ -10,83 +10,64 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/react": "^2.8.2",
-    "@chakra-ui/system": "^2.6.2",
-    "@chakra-ui/theme-tools": "^2.1.2",
-    "@emotion/cache": "^11.13.1",
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@hypertheme-editor/chakra-ui": "^0.2.2",
-    "@reduxjs/toolkit": "^2.2.7",
-    "@testing-library/jest-dom": "^6.5.0",
-    "@testing-library/react": "^16.0.1",
-    "@testing-library/user-event": "^14.5.2",
+    "@chakra-ui/theme-tools": "^2.2.6",
+    "@emotion/react": "^11.14.0",
+    "@reduxjs/toolkit": "^2.8.2",
+    "@tailwindcss/vite": "^4.1.8",
     "@tomtom-international/web-sdk-maps": "^6.25.0",
     "@tomtom-international/web-sdk-services": "^6.25.0",
-    "apexcharts": "^3.53.0",
-    "axios": "^1.7.7",
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "bwip-js": "^4.5.1",
+    "apexcharts": "^4.7.0",
+    "axios": "^1.9.0",
+    "bwip-js": "^4.6.0",
     "date-fns": "^4.1.0",
-    "dotenv": "^16.4.5",
-    "framer-motion": "^11.7.0",
-    "jspdf": "^2.5.2",
+    "framer-motion": "^12.16.0",
     "jwt-decode": "^4.0.0",
-    "moment": "^2.30.1",
-    "moment-timezone": "^0.5.45",
-    "nanoid": "^5.0.7",
-    "pngjs": "^7.0.0",
+    "nanoid": "^5.1.5",
     "print-js": "^1.6.0",
-    "react": "^18.3.1",
-    "react-apexcharts": "^1.4.1",
-    "react-big-calendar": "^1.14.1",
+    "react": "^19.1.0",
+    "react-apexcharts": "^1.7.0",
+    "react-big-calendar": "^1.19.2",
     "react-calendar": "^5.0.0",
     "react-chartjs-2": "^5.2.0",
     "react-custom-scrollbars-2": "^4.5.0",
-    "react-datepicker": "^7.4.0",
+    "react-datepicker": "^8.4.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^18.3.1",
-    "react-dropzone": "^14.2.3",
-    "react-icons": "^4.12.0",
+    "react-dom": "^19.1.0",
+    "react-dropzone": "^14.3.8",
+    "react-icons": "^5.5.0",
     "react-is": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-leaflet-fullscreen": "^4.1.1",
     "react-phone-number-input": "^3.4.8",
-    "react-qr-barcode-scanner": "^2.0.0",
-    "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.2",
+    "react-qr-barcode-scanner": "^2.1.6",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.6.2",
     "react-scripts": "^5.0.1",
     "react-select": "^5.8.3",
-    "react-spinners": "^0.14.1",
+    "react-spinners": "^0.17.0",
     "react-table": "^7.8.0",
     "react-toastify": "^10.0.5",
-    "recharts": "^2.12.7",
     "redux": "^5.0.1",
-    "redux-thunk": "^3.1.0",
     "socket.io-client": "^4.8.1",
-    "styled-components": "^6.1.14",
-    "stylis": "^4.3.4",
-    "stylis-plugin-rtl": "^2.1.1",
-    "sweetalert2": "^11.14.1",
-    "uuid": "^11.1.0",
-    "web-vitals": "^4.2.3"
+    "sweetalert2": "^11.22.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.9.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "eslint": "^9.9.0",
-    "eslint-plugin-react": "^7.35.0",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.9",
-    "globals": "^15.9.0",
-    "rollup-plugin-visualizer": "^5.14.0",
-    "vite": "^5.4.1"
+    "@eslint/js": "^9.28.0",
+    "@types/react": "^19.1.7",
+    "@vitejs/plugin-react": "^4.5.2",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.28.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.2.0",
+    "postcss": "^8.5.4",
+    "rollup-plugin-visualizer": "^6.0.3",
+    "tailwindcss": "^4.1.8",
+    "vite": "^6.3.5"
   }
 }
